--- a/dcc-portal-ui/src/main/js/app/styles/styles.css
+++ b/dcc-portal-ui/src/main/js/app/styles/styles.css
@@ -1656,7 +1656,7 @@ footer {
   /*background-image: -webkit-gradient(linear, 0 0, 0 100%, from(hsl(0, 0%, 98%)), to(hsl(0, 0%, 100%)));
   background-image: -moz-linear-gradient(center top, #fafafa 0%, #fff 100%);
   background-image: -o-linear-gradient(#fafafa, #fff);*/
-  padding: 1rem 3rem;
+  padding: 0.5rem 3rem;
   position: relative;
   z-index: 100;
   width: 100%;
@@ -1684,20 +1684,24 @@ footer .clear-fix:after {
   clear: both;
 }
 /* line 17, _sections/_footer.scss */
+footer .footer-caption {
+  margin-top: 0.1rem;
+}
+/* line 21, _sections/_footer.scss */
 footer a {
   text-decoration: none;
   color: #166aa2;
 }
-/* line 21, _sections/_footer.scss */
+/* line 25, _sections/_footer.scss */
 footer a:hover {
   text-decoration: underline;
 }
-/* line 25, _sections/_footer.scss */
+/* line 29, _sections/_footer.scss */
 footer .footer-grid-adjust {
   width: 14.89%;
   margin-right: 1.5rem;
 }
-/* line 30, _sections/_footer.scss */
+/* line 34, _sections/_footer.scss */
 footer ul, footer .logo {
   width: 48.9361702128%;
   clear: right;
@@ -1706,7 +1710,7 @@ footer ul, footer .logo {
   margin-right: 2.1276595745%;
 }
 @media (min-width: 721px) {
-  /* line 30, _sections/_footer.scss */
+  /* line 34, _sections/_footer.scss */
   footer ul, footer .logo {
     width: 13.1914893617%;
     clear: right;
@@ -1715,20 +1719,20 @@ footer ul, footer .logo {
     margin-right: 2.1276595745%;
   }
 }
-/* line 39, _sections/_footer.scss */
+/* line 43, _sections/_footer.scss */
 footer .logo img {
-  margin-top: 2rem;
+  margin-top: 1rem;
   width: 116px;
   height: 84px;
 }
 @media (min-width: 721px) {
-  /* line 39, _sections/_footer.scss */
+  /* line 43, _sections/_footer.scss */
   footer .logo img {
     width: 155px;
     height: 112px;
   }
 }
-/* line 51, _sections/_footer.scss */
+/* line 55, _sections/_footer.scss */
 footer ul {
   font-size: .8rem;
   line-height: 1.7;
@@ -1737,19 +1741,19 @@ footer ul {
   margin-right: 0.4rem;
   padding-left: 0;
 }
-/* line 59, _sections/_footer.scss */
+/* line 63, _sections/_footer.scss */
 footer ul .heading {
   color: #333333;
   text-transform: uppercase;
   font-size: 1rem;
   line-height: 3;
 }
-/* line 69, _sections/_footer.scss */
+/* line 73, _sections/_footer.scss */
 footer .dcc-col {
   margin-right: 0;
 }
 @media (min-width: 721px) {
-  /* line 69, _sections/_footer.scss */
+  /* line 73, _sections/_footer.scss */
   footer .dcc-col {
     margin-right: 2.1276595745%;
   }
